fix[navbar]: sticky and z-index

--- a/client/src/components/AppNavbar/AppNavbar.module.css
+++ b/client/src/components/AppNavbar/AppNavbar.module.css
@@ -1,8 +1,11 @@
-.appHeader {
+.appNavbar {
   position: sticky;
   top: 0;
-  height: var(--app-header-height);
   z-index: 999;
+}
+
+.appHeader {
+  height: var(--app-header-height);
   display: flex;
   align-items: center;
 }
